# debian-vps-workstation

./: .flake8  .gitignore  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  CONTRIBUTING.md  Final-Validation.md  PRE_PUSH_CHECKLIST.md  README.md  README.md.Backup  deploy prompt.md  deploy_monitor.py  deploy_prompt_comprehensive.md  install_local.py  install_tools.sh  phase3_validation_report.md  provision_remote.sh  pyproject.toml  pytest.ini  quick-install.sh  reproduce_issue.py  requirements-dev.txt  requirements.txt  run_deploy_cycle.sh  test_formatter.py  test_json_formatter.py  test_output.txt  validate_phase2.sh  validate_remote.sh  verify_fix.py
..\..\..\etc\passwd/: .xsession
.agent/rules/: README.md  architecture.md  code-style.md  custom.md  integration.md  naming.md  structure.md  technology.md
.agent/workflows/: software-engineer.md
.cursor/commands/: devops.md
.github/: AWESOME_COPILOT_SUMMARY.md  INSTALLATION_COMPLETE.md  copilot-instructions.md
.github/agents/: Ultimate-Transparent-Thinking-Beast-Mode.agent.md  arch.agent.md  code-tour.agent.md  debug.agent.md  devops-expert.agent.md  github-actions-expert.agent.md  janitor.agent.md  mentor.agent.md  prompt-builder.agent.md  refine-issue.agent.md  se-security-reviewer.agent.md  se-technical-writer.agent.md  software-engineer-agent-v1.agent.md  tdd-green.agent.md  tech-debt-remediation-plan.agent.md  terraform.agent.md
.github/copilot/: Project_Folders_Structure_Blueprint.md  Technology_Stack_Blueprint.md  architecture.md
.github/instructions/: ai-prompt-engineering-safety-best-practices.instructions.md  architecture.instructions.md  code-exemplars.instructions.md  codexer.instructions.md  containerization-docker-best-practices.instructions.md  github-actions-ci-cd-best-practices.instructions.md  makefile.instructions.md  memory-bank.instructions.md  performance-optimization.instructions.md  project-structure.instructions.md  self-explanatory-code-commenting.instructions.md  technology-stack.instructions.md  workflow.instructions.md
.github/prompts/: architecture-blueprint-generator.prompt.md  breakdown-feature-implementation.prompt.md  code-exemplars-blueprint-generator.prompt.md  conventional-commit.prompt.md  copilot-instructions-blueprint-generator.prompt.md  create-architectural-decision-record.prompt.md  create-readme.prompt.md  documentation-writer.prompt.md  editorconfig.prompt.md  file-organization-prompt.md  first-ask.prompt.md  folder-structure-blueprint-generator.prompt.md  gen-specs-as-issues.prompt.md  git-flow-branch-creator.prompt.md  project-workflow-analysis-blueprint-generator.prompt.md  readme-blueprint-generator.prompt.md  technology-stack-blueprint-generator.prompt.md
.github/workflows/: docs.yml  lint.yml  release.yml  test-xrdp-optimization.yml  tests.yml
cis-reports/: cis-scan-2026-01-06.html
config/: default.yaml  terminal-tools-profile.yaml
config/profiles/: advanced.yaml
configurator/: cli.py  cli_monitoring.py  config.py  config_schema.py  constants.py  exceptions.py  logger.py  wizard.py
configurator/benchmarks/: installation_speed.py  test_memory_usage.py
configurator/core/: __init__.py  audit.py  container.py  dependencies.py  dependency.py  dryrun.py  file_integrity.py  health.py  hooks.py  installer.py  lazy_loader.py  network.py  package_cache.py  parallel.py  reporter.py  rollback.py  secrets.py  validator.py
configurator/dependencies/: decorators.py  models.py  registry.py
configurator/modules/: __init__.py  base.py  caddy.py  cis_compliance.py  cursor.py  databases.py  desktop.py  devops.py  docker.py  git.py  golang.py  java.py  neovim.py  netdata.py  nodejs.py  php.py  python.py  rbac.py  rust.py  security.py  system.py  terminal_tools.py  thread_safety.py  trivy_scanner.py  utilities.py  vscode.py  wireguard.py
configurator/observability/: __init__.py  alerting.py  dashboard.py  metrics.py  structured_logging.py
configurator/plugins/: base.py  loader.py
configurator/profiles/: manager.py
configurator/rbac/: rbac_manager.py  roles.yaml  sudo_manager.py
configurator/security/: cert_monitor.py  certificate_manager.py  cis_report.py  cis_scanner.py  input_validator.py  mfa_manager.py  mfa_manager_wrapper.py  ssh_hardening.py  ssh_manager.py  ssh_manager_wrapper.py  ssl_manager.py  supply_chain.py  vuln_monitor.py  vuln_report.py  vuln_scanner_wrapper.py  vulnerability_scanner.py  webserver_config.py
configurator/ui/: __init__.py  theme.py  tui_dashboard.py
configurator/users/: activity_monitor.py  lifecycle_manager.py  team_manager.py  temp_access.py
configurator/utils/: apt_cache.py  circuit_breaker.py  command.py  file.py  file_lock.py  network.py  retry.py  system.py
configurator/ux/: history.py  search.py  suggestions.py
deploy_configs/: .xsession  apply_xfce_settings.sh  sesman.ini  xrdp.ini
docs/: ARCHITECTURE.md  DOCUMENTATION_GUIDE.md  Project_Workflow_Analysis_Blueprint.md  XRDP-XFCE-ZSH-GUIDE.md  architecture.md  cli-reference.md  exemplars.md  issue_manual.md  migration-v2.md  optimized-failfast-workflow.md  security.md  ui-performance.md  xrdp-xfce-zsh-guide.md
scripts/: README_DEPLOYMENT.txt  autonomous_deploy.sh  benchmark.py  bootstrap.sh  check_coverage.sh  debug_runner.py  deploy.sh  deploy_and_validate.sh  deploy_monitor.py  deploy_with_circuit_breaker.sh  diagnose.py  fix_vscode_keyring.sh  remote_setup.sh  run_all_tests.sh  run_deployment.sh  run_phase3_tests.sh  run_xrdp_tests.sh  setup_zsh_env.sh  validate_build.sh  validate_phase1.sh  validate_phase3.sh  validate_phase3_network.sh  validate_phase4_observability.sh  verify.sh  verify_desktop_standalone.py
tests/: conftest.py
tools/: benchmark_cache.py  benchmark_lazy_loading.py  benchmark_parallel.py  deploy_local_code.py  deploy_with_monitoring.py  diagnose_failures.py  dump_configs.py  failfast_orchestrator.py  prepare_manual_deployment.sh  prompt.md  remote_debug.py  remote_deploy.py  retry_deployment.sh  run_remote_test.py  stress_test.py
(+281 files in other folders)
