[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debian-vps-configurator"
version = "1.0.0"
description = "Transform Debian 13 VPS into a fully-featured remote desktop coding workstation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "VPS Configurator Team"}
]
keywords = ["debian", "vps", "workstation", "xrdp", "development", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "paramiko>=3.3.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "pylint>=3.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "types-paramiko>=3.3.0",
]

[project.scripts]
vps-configurator = "configurator.cli:main"

[project.urls]
Homepage = "https://github.com/youruser/debian-vps-configurator"
Documentation = "https://github.com/youruser/debian-vps-configurator#readme"
Repository = "https://github.com/youruser/debian-vps-configurator"
Issues = "https://github.com/youruser/debian-vps-configurator/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["configurator*"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring (we use __doc__)
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "destructive: marks tests that make system changes (use with caution)",
]

