[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "debian-vps-configurator"
version = "2.0.0"
description = "Transform Debian 13 VPS into a fully-featured remote desktop coding workstation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "VPS Configurator Team"}
]
keywords = ["debian", "vps", "workstation", "xrdp", "development", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "paramiko>=3.3.0",
    "jinja2>=3.1.0",
    "pydantic>=2.0.0",
    "cryptography>=41.0.0",
    "textual>=0.40.0",
    "networkx>=3.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0.0",
    "types-requests>=2.31.0",
    "types-paramiko>=3.3.0",
]

[project.scripts]
vps-configurator = "configurator.cli:main"

[project.urls]
Homepage = "https://github.com/yunaamelia/debian-vps-workstation"
Documentation = "https://github.com/yunaamelia/debian-vps-workstation#readme"
Repository = "https://github.com/yunaamelia/debian-vps-workstation"
Issues = "https://github.com/yunaamelia/debian-vps-workstation/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["configurator*"]

[tool.setuptools.package-data]
"configurator" = ["**/*.sql", "**/*.yaml", "**/*.yml"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["E501", "E203", "F841", "E303", "B904", "B007", "B017"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"configurator/modules/__init__.py" = ["E402", "F401"]
"configurator/utils/file.py" = ["E402"]
"configurator/utils/network.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["configurator"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "destructive: marks tests that make system changes (use with caution)",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]
